feat: New updates

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Chicken Sandwich Recipe</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body>
+<body class="sandwich-page">
   <h1>Chicken Sandwich</h1>
 
   <img src="imgs/sandwich.jpg" alt="Delicious Chicken Sandwich">
